--- a/src/code/images/Dockerfile
+++ b/src/code/images/Dockerfile
@@ -35,7 +35,7 @@ RUN aria2c -x 5 --dir / --out wheel.whl 'https://github.com/AbdBarho/stable-diff
 
 FROM python:3.10.9-slim as extensions
 
-ENV DEBIAN_FRONTEND=noninteractive PIP_PREFER_BINARY=1
+RUN apk add --no-cache aria2
 
 RUN --mount=type=cache,target=/cache --mount=type=cache,target=/root/.cache/pip \
   aria2c -x 5 --dir /cache --out torch-2.0.1-cp310-cp310-linux_x86_64.whl -c \
